# vgg16-style-transfer

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.cfg  setup.py  vgg16_vgg19_comparison.py
examples/vgg16st/: whitening.py
py_src/vgg16autoencoder/: main.py
py_src/vgg16autoencoder/dataset/: dataloader.py
py_src/vgg16autoencoder/weights/: best2.pt
py_src/vgg16common/: constants.py
py_src/vgg16kv/app/: __init__.py
py_src/vgg16st/: utils.py
pysrc/vgg16autoencoder/: __init__.py  __main__.py
pysrc/vgg16autoencoder/dataset/: unsupervised.py  vgg_ds.py
pysrc/vgg16common/: __init__.py
pysrc/vgg16kv/app/: app.py
pysrc/vgg16st/transforms/: __init__.py  wct.py  whitening.py
src/: EL4106_Proyecto.ipynb  el4106_proyecto.py
src/style_transfer/: __main__.py  training.py
src/style_transfer/dataset/: unsupervised.py
src/style_transfer/loss/: vgg_loss.py
src/vgg16-st/model/: encoder.py
src/vgg16/dataset/: dataloader.py  vgg_ds.py
src/vgg16_autoencoder/: __init__.py  __main__.py  training.py  wct.py
src/vgg16_autoencoder/dataset/: unsupervised.py  vgg_ds.py
src/vgg16_autoencoder/loss/: __init__.py  vgg_loss.py
src/vgg16_autoencoder/model/: __init__.py  decoder.py  encoder.py
src/vgg16_autoencoder/weights/: best.toml
src/vgg16autoencoder/: __init__.py  __main__.py  arg_parser.py  constants.py  logger.py  main.py  training.py
src/vgg16autoencoder/dataset/: dataloader.py  unsupervised.py  vgg_ds.py
src/vgg16autoencoder/loss/: vgg_loss.py
src/vgg16autoencoder/model/: __init__.py  decoder.py  encoder.py
src/vgg16autoencoder/weights/: best.toml  best1.pt  best1.toml  best2.pt  best2.toml  best3.toml  best4.toml  best5.toml
src/vgg16common/: __init__.py  constants.py  logger.py
src/vgg16kv/: __main__.py  main.py
src/vgg16kv/app/: app.py  styletransfer.kv
src/vgg16st/: __init__.py  __main__.py  arg_parser.py  exceptions.py  functions.py  main.py  style_transfer.py  training.py  utils.py  wct.py
src/vgg16st/dataset/: __init__.py  dataloader.py  unsupervised.py  vgg_ds.py
src/vgg16st/loss/: vgg_loss.py
src/vgg16st/model/: decoder.py  encoder.py
src/vgg16st/transforms/: __init__.py  coloring.py  transform.py  wct.py  whitening.py
vgg16_autoencoder/: __main__.py  logger.py  training.py
vgg16_autoencoder/dataset/: dataloader.py
vgg16_autoencoder/weights/: 20221109_212828.toml
