[metadata]
name = vgg16-st
description = Style transfer implemented using the VGG16 network
author = Cristóbal Allendes
license = MIT Licente
license_file = LICENSE
platforms = supported-platforms
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

# These options can be changed according to your project
[options]
packages =
    vgg16_autoencoder
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
vgg16_autoencoder = py.typed
