[metadata]
name = vgg16st
description = Style transfer implemented using the VGG16 network
author = Cristóbal Allendes
license = MIT Licente
license_file = LICENSE
platforms = supported-platforms
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

# These options can be changed according to your project
[options]
packages =
    vgg16st
    vgg16st.dataset
    vgg16st.loss
    vgg16st.model
    vgg16st.weights
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
vgg16st = py.typed
vgg16st.weights =
    best.pt
    best.toml
