[metadata]
name = vgg16_style_transfer
description = Style transfer implemented using the VGG16 network
author = Cristóbal Allendes
license = MIT Licente
license_file = LICENSE
platforms = supported-platforms
version = 0.3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

# These options can be changed according to your project
[options]
packages =
    vgg16autoencoder
    vgg16autoencoder.dataset
    vgg16autoencoder.logs
    vgg16autoencoder.loss
    vgg16autoencoder.model
    vgg16autoencoder.weights
    vgg16autoencoder.weights.vgg19
    vgg16common
    vgg16kv
    vgg16kv.app
    vgg16st
    vgg16st.logs
    vgg16st.transforms
    vgg16st.vendor
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.package_data]
vgg16autoencoder = py.typed
vgg16autoencoder.weights =
    *.pt
    vgg19/*.pt
vgg16common = py.typed
vgg16st = py.typed
